Finally fix text wrapping visual glitch!

--- a/src/rendering/styles.module.css
+++ b/src/rendering/styles.module.css
@@ -2,9 +2,13 @@
   cursor: inherit;
 }
 
-.paragraph span::before,
+/* .paragraph span::before,
 .paragraph span::after {
   content: "\200B";
+} */
+
+.paragraph span {
+  white-space: pre-wrap;
 }
 
 .emphasis {
